fixed about page not display features correctly on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,11 @@ main a:hover {
 
 /* Phone Displays */
 @media only screen and (max-width: 768px) {
+  html, body {
+    overflow-x: hidden;
+    width: 100%;
+  }
+  
   body h1 {
     font-size: 3em;
   }
@@ -252,8 +257,9 @@ main a:hover {
   #about-features {
     display: block;
     flex-direction: column;
-    height: 100%;
-    padding-top: 30px;
+    height: 800px;
+    max-width: 100%;
+    padding: 50px 0;
   }
 
   /* About Sub-Articles */
